fix: destinations card shift

--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
@@ -5,6 +5,8 @@
 
 img {
 	border-radius: 16px;
+	min-height: 18.75rem;
+	min-width: 18.75rem;
 }
 
 .view-button {
